 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.10.1

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-3019: Need a target in build.xml for source releases (gates)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2908: Fix unit tests to work with jdk7 (rohini via dvryaboy) 

PIG-2852: Update documentation regarding parallel local mode execution (cheolsoo via jcoveney)

PIG-2712: Pig does not call OutputCommitter.abortJob() on the underlying OutputFormat (rohini via gates)

PIG-2727: PigStorage Source tagging does not need pig.splitCombination to be turned off (prkommireddi via dvryaboy)

BUG FIXES

PIG-3099: Pig unit test fixes for TestGrunt(1), TestStore(2), TestEmptyInputDir(3) (vikram.dixit via daijy)

PIG-3035: With latest version of hadoop23 pig does not return the correct exception stack trace from backend (rohini)

PIG-2953: "which" utility does not exist on Windows (daijy)

PIG-2960: Increase the timeout for unit test (daijy)

PIG-2958: Pig tests do not appear to have a logger attached (daijy)

PIG-2942: DevTests, TestLoad has a false failure on Windows (jgordon via daijy)

PIG-2943: DevTests, Refactor Windows checks to use new Util.WINDOWS method for code health (jgordon via dvryaboy)

PIG-2801: grunt "sh" command should invoke the shell implicitly instead of calling exec directly with the command tokens
(jgordon via daijy)

PIG-2800: pig.additional.jars path separator should align with File.pathSeparator instead of being hard-coded to ":"
(jgordon via azaroth)

PIG-2798: pig streaming tests assume interpreters are auto-resolved (jgordon via daijy)
